# Codeguard-copilot

./: .codeguard-state.json  .codeguard.example.json  .gitignore  .gitlab-ci.example.yml  .pre-commit-hooks.yaml  MANIFEST.in  README.md  SETUP_GUIDE.md  codeguard_finetune.py  gaps_1to8.py  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: ci.yml  python-ci.yml
codeguard/: __init__.py  ast_analyzer.py  cli.py  engine.py  exploitability.py  integrations.py  intelligence.py  output.py  patterns.json  providers.py  raven.py  reachability.py  secret_detection.py  treesitter_ast.py  tuned_model.py  wraithcore.py  wraithcore_api.py
docs/: RELEASE_REPORT.md  realtime-scanning.jpg.bak
docs/raven-validation/: ARCHITECTURE.md  CAPABILITY_MATRIX.md  CODEGUARD_INTEGRATION.md  DEMO.md  LIMITATIONS.md  RELEASE_READINESS.md
hooks/: pre-commit
src/: extension.ts
src/Ui/: quickFix.ts
src/ai/: aiEngine.ts
src/config/: customRules.ts
src/jetbrains/: exporter.ts
src/knowledge/: graph.ts
src/patterns/: expandedPatterns.ts  securityScanner.ts  vulnerabilityPatterns.ts
src/plugins/: registry.ts
src/raven/: bridge.ts  feedback.ts
src/training/: mode.ts
tests/: test_codeguard.py
